AC_INIT(zero-install.c)
AM_INIT_AUTOMAKE(zero-install, 0.1.14)
AM_CONFIG_HEADER(Linux/config.h)
AC_PROG_MAKE_SET

AC_PROG_CC

dnl When doing 'make distcheck', use $prefix/lib for kernel module.
AC_ARG_WITH(distcheck,,
	[ROOT_PREFIX='$(prefix)'],
	[ROOT_PREFIX=''])
AC_SUBST(ROOT_PREFIX)

dnl Check for directory with kernel source... (from ALSA)
AC_MSG_CHECKING(for directory with kernel source)
AC_ARG_WITH(kernel,
  [  --with-kernel=dir       give the directory with kernel sources]
  [                        [/usr/src/linux]],
  KERNELDIR="$withval",
  if test -d "/lib/modules/`uname -r`/build" -o -L "/lib/modules/`uname -r`/build"; then
    KERNELDIR="/lib/modules/`uname -r`/build"
  else
    KERNELDIR="/usr/src/linux"
  fi
)
AC_MSG_RESULT($KERNELDIR)
AC_SUBST(KERNELDIR)

AC_MSG_CHECKING(for user to run helper as)
AC_ARG_WITH(user,
  [  --with-user=user       run helper application as 'user'],
  [HELPER_USER="$withval"],
  [HELPER_USER="yes"])
if [[ "$HELPER_USER" = "yes" ]]; then
  AC_MSG_RESULT(missing)
  echo
  echo "Must specify a user to run the helper as, eg:"
  echo "./configure --with-user=zeroinst"
  echo "(having created a new user called 'zeroinst' for the purpose)"
  echo "Using 'root' is not recommended, for security reasons."
  exit 1
fi
AC_MSG_RESULT($HELPER_USER)
AC_SUBST(HELPER_USER)

if [ ! id "$HELPER_USER" > /dev/null ]; then
  echo "User '$HELPER_USER' does exist!"
  exit 1
fi

dnl Check for kernel version...
AC_MSG_CHECKING(for kernel headers)
if ! test -r "$KERNELDIR/include/linux/version.h"; then
  cat << EOF


The file $KERNELDIR/include/linux/version.h does not exist.
Please, install the package with full kernel sources for your distribution
or use --with-kernel=dir option to specify another directory with kernel
sources (default is /usr/src/linux). Note: this error could also mean
that you haven't built the kernel yet.
EOF
  exit 1
fi
AC_MSG_RESULT(OK)

AC_MSG_CHECKING(for kernel series)
if [[ -f "$KERNELDIR/include/linux/compat.h" ]]; then
  KERNEL_TYPE=Linux_2_5
else
  KERNEL_TYPE=Linux_2_4
fi
AC_MSG_RESULT($KERNEL_TYPE)
AC_SUBST(KERNEL_TYPE)

AC_MSG_CHECKING(for platform type)
ARCH=`uname -m`
case $ARCH in
	i?86) ARCH=ix86 ;;
esac
PLATFORM=`uname -s`-$ARCH
AC_MSG_RESULT($PLATFORM)
AC_DEFINE_UNQUOTED(LAZYFS_PLATFORM, "$PLATFORM", [The canonical name for @PLATFORM@ symlinks])

AC_OUTPUT(Makefile \
	  Linux/Makefile)
